2003-08-06  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos/Greg_Rymer/*: 
	* logo-competition/logos_new.php: 
	added logos

2003-08-04  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php: 
	* logo-competition/logos/Phil_Harper/index.php: 
	added logo. added overview pics.

2003-07-30  Uwe Pross  <uwe.pross@gmx.net>

	* links.php: 
	* index.php: 
	Added link to wiki page

	* contact/index.php:
	Added heading for IRC Channels
	
2003-07-28  Uwe Pross  <uwe.pross@gmx.net>

	* news/news2php: 
	* news/index.php:
	fixed minor bug in news generation script. regenerated news page

	* logo-competition/logos/Eric_Hafner/*:
	* logo-competition/logos/Daniel_Gadziemski/*:
	* logo-competition/logos_new.php:
	added logos

2003-07-23  Uwe Pross  <uwe.pross@gmx.net>

	* COPYING: 
	* definitions.inc:
	added gpl license file and statement.
	
2003-07-22  Uwe Pross  <uwe.pross@gmx.net>

	* web-theme/themes/theme_descriptions.inc: 
	* web-theme/classes/pager_on_top_class.inc:
	changed default look to a more fancy one ;-)

2003-07-21  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php: 
	* logo-competition/logos/Alex_Wallis/*:
	added logo of alex wallis

2003-07-18  Uwe Pross  <uwe.pross@gmx.net>

	* customize_theme/theme_descriptions_helper.inc: 
	* definitions.inc: 
	fixed problems using cookies for theme ond style selection. 

2003-07-17  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php: 
	* web-theme/classes/pager_on_top_class.inc:
	* web-theme/themes/pager_on_top_theme.inc:
	* web-theme/themes/theme_descriptions.inc:
	* web-theme/themes/plain_theme.inc:
	changed theme to "pager on top theme"
	
2003-07-16  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php: 
	* logo-competition/logos/Russell_Martin/*:
	added logo of russel martin

2003-07-16  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos/Anthony_Lee/index.php: 
	* logo-competition/logos_new.php:
	added two more logos
	