@@ -428,4 +428,17 @@ width="453" height="157" border="0" vspace="0" hspace="0">
 
 <!-- ============================================================= -->
 
+<?php decoration_window_start("By Patrick Collision (1 image)", "", "", 0); ?>
+
+<a href="<?php echo conv_link_target('logos/Patrick_Collison/index.php'); ?>">
+
+<p><img src="logos/Patrick_Collison/overview.png" border="0" vspace="0" hspace="0">
+
+<p>More...
+</a>
+
+<?php decoration_window_end(); ?>
+
+<!-- ============================================================= -->
+
 <p>Return to <a href="<?php echo conv_link_target('./');?>">index</a>.</p>
