@@ -2,6 +2,7 @@
 
 	* logo-competition/logos/Greg_Rymer/*: 
 	* logo-competition/logos_new.php: 
+	* logo-competition/logos/Patrick_Collison/*:
 	added logos
 
 2003-08-04  Uwe Pross  <uwe.pross@gmx.net>
